# Nimble

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
crates/nimble-app/: Cargo.toml
crates/nimble-app/src/: app.rs  config.rs  main.rs  tray.rs  ui_settings.rs  ui_status.rs
crates/nimble-bencode/: Cargo.toml
crates/nimble-bencode/src/: decode.rs  lib.rs  torrent.rs
crates/nimble-bencode/tests/: decode_tests.rs
crates/nimble-core/: Cargo.toml
crates/nimble-core/src/: bandwidth.rs  choking.rs  endgame.rs  engine.rs  lib.rs  magnet.rs  peer_manager.rs  peer_scoring.rs  session.rs  settings.rs  tracker_worker.rs  types.rs
crates/nimble-core/tests/: add_torrent_workflow.rs  engine_smoke.rs
crates/nimble-dht/: Cargo.toml
crates/nimble-dht/src/: bootstrap.rs  lib.rs  node.rs  peer_ip.rs  routing.rs  rpc.rs  tokens.rs
crates/nimble-lsd/: Cargo.toml
crates/nimble-lsd/src/: bep14.rs  lib.rs
crates/nimble-nat/: Cargo.toml
crates/nimble-nat/src/: lib.rs  nat_pmp.rs  ssdp.rs  upnp.rs
crates/nimble-net/: Cargo.toml
crates/nimble-net/src/: encryption.rs  extension.rs  handshake.rs  lib.rs  listener.rs  peer.rs  sockets.rs  tracker_http.rs  tracker_udp.rs  ut_metadata.rs  ut_pex.rs  utp.rs  utp_peer.rs
crates/nimble-net/tests/: ut_metadata.rs
crates/nimble-storage/: Cargo.toml
crates/nimble-storage/src/: buffer_pool.rs  cache.rs  checkpoint.rs  disk.rs  disk_worker.rs  hasher.rs  io_pool.rs  layout.rs  lib.rs  resume.rs
crates/nimble-util/: Cargo.toml
crates/nimble-util/src/: bitfield.rs  hash.rs  ids.rs  lib.rs  log.rs  time.rs
