        [package]
        name = "nimble-bencode"
        version.workspace = true
        edition.workspace = true
        license.workspace = true
        rust-version.workspace = true

        [features]
default = []

        [dependencies]
        anyhow = { workspace = true }
        thiserror = { workspace = true }
        nimble-util = { path = "../nimble-util", features = ["sha1_crate"] }
