        [package]
        name = "nimble-core"
        version.workspace = true
        edition.workspace = true
        license.workspace = true
        rust-version.workspace = true

        [features]
default = []
ipv6 = []
utp = []

        [dependencies]
        anyhow = { workspace = true }
        thiserror = { workspace = true }
        fastrand = { workspace = true }
        nimble-util = { path = "../nimble-util" }
nimble-bencode = { path = "../nimble-bencode" }
nimble-storage = { path = "../nimble-storage" }
nimble-net = { path = "../nimble-net" }
nimble-dht = { path = "../nimble-dht" }
nimble-lsd = { path = "../nimble-lsd" }
nimble-nat = { path = "../nimble-nat" }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
