        [package]
        name = "nimble-dht"
        version.workspace = true
        edition.workspace = true
        license.workspace = true
        rust-version.workspace = true

        [features]
default = []
ipv6 = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
nimble-bencode = { path = "../nimble-bencode" }
nimble-util = { path = "../nimble-util" }
