        [package]
        name = "nimble-lsd"
        version.workspace = true
        edition.workspace = true
        license.workspace = true
        rust-version.workspace = true

        [features]
default = []

        [dependencies]
        anyhow = { workspace = true }
        thiserror = { workspace = true }
        fastrand = { workspace = true }
        hex = { workspace = true }
        windows-sys = { workspace = true, features = ["Win32_Networking_WinSock"] }
        nimble-util = { path = "../nimble-util" }
