        [package]
        name = "nimble-nat"
        version.workspace = true
        edition.workspace = true
        license.workspace = true
        rust-version.workspace = true

        [features]
default = []
upnp = []
nat_pmp = []

        [dependencies]
        anyhow = { workspace = true }
        thiserror = { workspace = true }
        ureq = { workspace = true }
        quick-xml = { version = "0.31", default-features = false }
        nimble-util = { path = "../nimble-util" }
