        [package]
        name = "nimble-net"
        version.workspace = true
        edition.workspace = true
        license.workspace = true
        rust-version.workspace = true

        [features]
default = []
winhttp = []
ipv6 = []
utp = []

        [dependencies]
        anyhow = { workspace = true }
        thiserror = { workspace = true }
        windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_Networking_WinHttp",
  "Win32_System_Threading",
] }
nimble-util = { path = "../nimble-util" }
nimble-bencode = { path = "../nimble-bencode" }
