        [package]
        name = "nimble-net"
        version.workspace = true
        edition.workspace = true
        license.workspace = true
        rust-version.workspace = true

        [features]
default = []
winhttp = []
ipv6 = []
utp = []

        [dependencies]
        anyhow = { workspace = true }
        thiserror = { workspace = true }
        windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_Networking_WinHttp",
  "Win32_System_Threading",
] }
nimble-util = { path = "../nimble-util", features = ["sha1_crate"] }
nimble-bencode = { path = "../nimble-bencode" }
num-bigint = { version = "0.4", default-features = false }
fastrand = { version = "2", default-features = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"
