        [package]
        name = "nimble-storage"
        version.workspace = true
        edition.workspace = true
        license.workspace = true
        rust-version.workspace = true

        [features]
default = []
cache = []
prealloc = []

        [dependencies]
        anyhow = { workspace = true }
        thiserror = { workspace = true }
        nimble-util = { path = "../nimble-util" }
        nimble-bencode = { path = "../nimble-bencode" }
        sha1 = { workspace = true }

        [dev-dependencies]
        tempfile = "3"
