[package]
name = "nimble-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
cache = []
prealloc = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
nimble-util = { path = "../nimble-util" }
nimble-bencode = { path = "../nimble-bencode" }
sha1 = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Security",
] }
crossbeam-queue = "0.3"
lru = "0.12"

[dev-dependencies]
tempfile = { workspace = true }
