        [package]
        name = "nimble-util"
        version.workspace = true
        edition.workspace = true
        license.workspace = true
        rust-version.workspace = true

        [dependencies]
        anyhow = { workspace = true }
        thiserror = { workspace = true }
        windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_Security_Cryptography",
] }
sha1 = { workspace = true }
